new file:   00theory/GNN_reviews.md

--- a/00exercise/week4.ipynb
+++ b/00exercise/week4.ipynb
@@ -297,6 +297,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Accuracy: 99.28%"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
